# Atlas

./: .gitignore  DESIGN_OVERHAUL.md  README.md  agents.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_store.sql
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: accounts.rs  games.rs  launch.rs  launcher.rs  mod.rs  store.rs  sync.rs  system.rs
src-tauri/src/connectors/: itad.rs  mod.rs  steam.rs  steamstore.rs
src-tauri/src/sync/: epic.rs  mod.rs  steam.rs
src/app/: App.tsx
src/components/: CommandPalette.tsx
src/components/common/: LoadingSpinner.tsx
src/components/games/: GameCard.tsx  GameDetailPanel.tsx  GameGrid.tsx  GameStatusBadge.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx  TopBar.tsx
src/components/settings/: SettingsPanel.tsx
src/components/ui/: ActionButton.tsx  Badges.tsx  Button.tsx  CoverImage.tsx  Field.tsx  InputField.tsx  SidebarButton.tsx  Slider.tsx  Spinner.tsx  Switch.tsx  Toasts.tsx  Tooltip.tsx
src/features/accounts/: AccountsView.tsx
src/features/dashboard/: DashboardView.tsx  Hero.tsx
src/features/detail/: GameDetail.tsx  (+1 more)
src/hooks/: useGameLauncher.ts  useSync.ts
src/i18n/: index.ts  locales.ts
src/lib/: color.ts  db.ts  devMock.ts  env.ts  format.ts  meta.ts  nav.ts  select.ts  sfx.ts  steamArt.ts  tauri.ts
src/store/: useStore.ts
src/stores/: useGameStore.ts
src/types/: index.ts
(+4 files in other folders)
