[package]
name = "game-manager"
version = "0.2.0"
description = "Atlas — unified cross-platform game library hub"
authors = ["Atlas"]
edition = "2021"

[lib]
name = "game_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core + plugins
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# HTTP client (Steam Web API and future connectors).
# Default features use the system TLS (Security.framework on macOS, SChannel on
# Windows) — no OpenSSL dependency, and matches the previously-cached build.
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
# Lean release binary — small footprint
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
